# advent_of_code

./: CMakeLists.txt  Packages.cmake
2015/: 10_notes.txt  11_notes.txt  12_notes.txt  13_notes.txt  14_notes.txt  15_notes.txt  16_notes.txt  17_notes.txt
2015/c++/: 10_1.cpp  10_2.cpp  11_1.cpp  11_2.cpp  12_1.cpp  12_2.cpp  13_1.cpp  13_2.cpp  14_1.cpp  14_2.cpp  15_1.cpp  15_2.cpp  1_1.cpp  1_2.cpp  2_1.cpp  2_2.cpp  3_1.cpp  3_2.cpp  4_1.cpp  4_2.cpp  5_1.cpp  5_2.cpp  6_1.cpp  6_2.cpp  7_1.cpp  7_2.cpp  8_1.cpp  8_2.cpp  9_1.cpp  9_2.cpp
2015/python/: 01_1.py  01_2.py  02_1.py  02_2.py  03_1.py  03_2.py  04_1.py  04_2.py  05_1.py  05_2.py  06_1.py  06_2.py  07_1.py  07_2.py  08_1.py  08_2.py  09_1.py  09_2.py  10_1.py  10_2.py  11_1.py  11_2.py  12_1.py  12_2.py  13_1.py  13_2.py  14_1.py  14_2.py  15_1.py  15_2.py  16_1.py  16_2.py  17_1.py  17_2.py
2023/c++/: 1_1.cpp
2023/python/: 01_1.py  01_2.py  02_1.py  02_2.py  03_1.py
